--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,11 @@
               "includePaths": [
                 "src/styles"
               ]
+            },
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
             }
           },
           "configurations": {
