--- a/angular.json
+++ b/angular.json
@@ -42,9 +42,7 @@
             "outputPath": "dist/clinica-abertamente",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -58,15 +56,9 @@
             ],
             "scripts": [],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/styles"
-              ]
+              "includePaths": ["src/styles"]
             },
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "outputMode": "static"
           },
           "configurations": {
             "production": {
@@ -105,9 +97,11 @@
           },
           "defaultConfiguration": "development"
         },
+
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
+
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -129,6 +123,7 @@
             "scripts": []
           }
         },
+
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
@@ -138,6 +133,7 @@
             ]
           }
         },
+
         "deploy": {
           "builder": "angular-cli-ghpages:deploy"
         }
